manifests/frontend/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: bosukeme/image-signer-frontend:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "500Mi"
            cpu: "1000m"
          limits:
            memory: "500Mi"
            cpu: "1000m"
        ports:
        - containerPort: 3000
          protocol: TCP 
        readinessProbe:
          httpGet:
            path: /
            port: 3000
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
